fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,17 @@ nav {
   display: flex;
 }
 
-ul {
+#nav ul {
   display: flex;
   flex: 1 1 20px;
   justify-content: flex-end;
+  margin-right: 30px;
 }
 
 li {
   list-style-type: none;
   padding: 5px;
+  margin-right: 30px;
 }
 
 #nav a {
@@ -297,6 +299,7 @@ h2 {
 #footer #social_media img {
   border: 1px solid #371977;
   border-radius: 100px;
+  margin-right: 20px;
 }
 
 #footer #copyright img {
